--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>16 medidas absolutas</title>
+    <title> medidas absolutas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>16 medidas absolutas</h1>
+    <h1> medidas absolutas</h1>
 
     <div class="pixel"></div>
+<tr>
+<td>R$210,00</td>
 
+</tr>
 </body>
 </html>
